--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <li><a href="#"></a>Contact</li>
 
         </ul>
+        <div class="menu-btn">
+            <i class="fas fa-bars fa-inverse"></i>
+        </div>
     </nav>
     <!--Header-->
     <header>
@@ -38,5 +41,7 @@
             </div>
         </div>
     </header>
+    <!--Script here-->
+    <script src="script.js"></script>
 </body>
 </html>
